Compact news server/newsgroup errors with "Uncaught NS_ERROR_NOT_IMPLEMENTED: Component returned failure code: 0x80004001 (NS_ERROR_NOT_IMPLEMENTED) [nsIMsgFolder.compactAll] compactAllFoldersForAccount chrome://messenger/content/about3Pane.js:3856"
Categories
(Thunderbird :: General, defect)
Tracking
(thunderbird_esr115 wontfix, thunderbird_esr128 affected, thunderbird138 affected, thunderbird139 affected, thunderbird140 fixed)
People
(Reporter: wsmwk, Assigned: welpy-cw)
References
(Regression)
Details
(Keywords: regression, reproducible)
Attachments
(2 files)
140.0a1 2025-05-01
- Picked a news server (news.blueworldhosting.com)
- File > Compact
Uncaught NS_ERROR_NOT_IMPLEMENTED: Component returned failure code: 0x80004001 (NS_ERROR_NOT_IMPLEMENTED) [nsIMsgFolder.compactAll]
compactAllFoldersForAccount chrome://messenger/content/about3Pane.js:3856
<anonymous> chrome://messenger/content/about3Pane.js:6621
doCommand chrome://messenger/content/mailCommon.js:754
triggerCommand chrome://messenger/content/about3Pane.js:834
onCommand chrome://messenger/content/about3Pane.js:818
handleEvent chrome://messenger/content/about3Pane.js:276
Comment 1•6 months ago
|
||
Right ::CompactAll() is not implemented for news, only Compact() which does not do the normal compact... - https://searchfox.org/comm-central/rev/8c6d2ec9e235c9aa3b8ea444f939d776304fbea8/mailnews/news/src/nsNewsFolder.cpp#1362
I'm not sure why it doesn't do the same compact as local folders do.
| Assignee | ||
Updated•6 months ago
|
| Assignee | ||
Comment 2•6 months ago
|
||
Updated•6 months ago
|
| Assignee | ||
Comment 3•6 months ago
|
||
Updated•6 months ago
|
| Assignee | ||
Updated•6 months ago
|
| Assignee | ||
Updated•6 months ago
|
Updated•6 months ago
|
Pushed by corey@thunderbird.net:
https://hg.mozilla.org/comm-central/rev/8db698ef5032
Disable "Compact" for newsgroup accounts. r=babolivier
https://hg.mozilla.org/comm-central/rev/06af8f98b148
Remove unused/non-functional folder compaction code from nsNewsFolder. r=babolivier
Description
•