Bug 1964161 - Remove unused/non-functional folder compaction code from nsNewsFolder. r=babolivier

Differential Revision: https://phabricator.services.mozilla.com/D250016

--HG--
extra : amend_source : 26a034a8151d1c865948e034174f58a0406dcfd5